# bayesian-laws-icl

./: .gitignore  Analysis.ipynb  Compare.ipynb  Error.ipynb  Hyperparameters.ipynb  LLM-Evals.ipynb  LLM.ipynb  README.md  analyse.py  data.py  flops.sh  llm.py  make_graphs.py  plot.py  pyproject.toml  sft_amount.sh  sft_amount_12.sh  sft_amount_8.sh  sft_isoflops.sh  test.py  tokenizer.json  train.py  trainer.py  xie.py
bayesian_laws_icl/: analyse.py  data.py  make_graphs.py  make_graphs_llm.py  train.py  trainer.py
bayesian_laws_icl/scratch/: bernoulli.py  test.py
scratch/: lbfgs.py
